hero padding fix on mobile screen

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,7 +3,7 @@
 @use "src/styles/poly-fluid" as *;
 
 .hero {
-  @apply pb-4 sm:pb-0 h-full;
+  @apply pb-9 sm:pb-0 h-full;
 }
 
 .hero-img-curve-container {
